# fast-django-api-boilerplate

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: local.py
envs/: app.local.env
